# scorbotLabo

./: TO_DO.txt
conector_scorbot/devel/: .catkin  local_setup.sh  setup.sh
conector_scorbot/devel/lib/pkgconfig/: conector_simulador_scorbot.pc
conector_scorbot/src/scorbot_conector_sim/: CMakeLists.txt  package.xml
devel/: .catkin  .rosinstall  local_setup.sh
devel/lib/pkgconfig/: scorbot_gazebo_effort.pc  scorbot_gazebo_tf.pc
devel/share/scorbot_gazebo_effort/cmake/: scorbot_gazebo_effortConfig.cmake
modelo_scorbot_gazebo/devel/: .catkin  setup.sh
modelo_scorbot_gazebo/devel/include/sim_scorbot_master/: JointTrajectory.h  JointVelocities.h  TrajectoryPoint.h
modelo_scorbot_gazebo/devel/lib/pkgconfig/: conector_simulador_scorbot.pc  scorbot_gazebo_tf.pc  sim_scorbot_master.pc
modelo_scorbot_gazebo/devel/lib/sim_scorbot_master/: sim_scorbot_master_node
modelo_scorbot_gazebo/src/conector_simulador_scorbot/: CMakeLists.txt
modelo_scorbot_gazebo/src/conector_simulador_scorbot/src/: conector.cpp  conector_node.cpp
modelo_scorbot_gazebo/src/scorbot_tf/: Alt_CMakeLists.txt  Alt_package.xml  CMakeLists.txt  package.xml
modelo_scorbot_gazebo/src/scorbot_tf/config/: controllers.yaml
modelo_scorbot_gazebo/src/scorbot_tf/launch/: scorbot_join_test.launch
modelo_scorbot_gazebo/src/sim_scorbot_master/: CMakeLists.txt  package.xml
notebook_analisis/: result_analisis.ipynb
notebook_analisis/.ipynb_checkpoints/: result_analisis-checkpoint.ipynb
software scorbot/: brazo_central_original.ino
software scorbot/angle_to_vel/: package.xml
software scorbot/angle_to_vel/src/: angle_to_vel.cpp  angle_to_vel.h
software scorbot/brazo_pid_prueba_joints/: brazo_i2c.h  brazo_pid_prueba_joints.ino
software scorbot/firmware-scorbot-master/brazo_central/: brazo_central.ino  comandos
software scorbot/firmware-scorbot-master/brazo_pid_perfil_velocidad/: pwm_frequency.h
software scorbot/ros-scorbot-master/seguidor_de_poses/: CMakeLists.txt  package.xml
software scorbot/ros-scorbot-master/seguidor_de_poses/src/: Seguidor.cpp  Seguidor.hpp  nodo_seguidor.cpp
software scorbot/scorbot-firmware-master/brazo_central/: JointTrajectory.h  JointVelocities.h  TrajectoryPoint.h  brazo_central.ino
software scorbot/scorbot-firmware-master/brazo_pid/: brazo_pid.ino
software scorbot/scorbot-firmware-master/brazo_pid_perfil_velocidad/: brazo_i2c.h  brazo_pid_perfil_velocidad.ino  valores_PID
software scorbot/scorbot-firmware-master/brazo_viejo/: brazo_viejo.ino
software scorbot/scorbot_catkin_ws/devel/: .catkin  .rosinstall  _setup_util.py  local_setup.sh  setup.sh
software_scorbot/firmware-scorbot-master/brazo_central/: JointTrajectory.h  JointVelocities.h  brazo_central.ino
software_scorbot/firmware-scorbot-master/brazo_pid/: brazo_pid.ino
software_scorbot/ros_lib/keyboard/: Key.h
software_scorbot/ros_lib/moveit_msgs/: GetCartesianPath.h  GetStateValidity.h
software_scorbot/ros_lib/scorbot/: JointVelocities.h
software_scorbot/ros_lib/universal_teleop/: Control.h  Event.h
software_scorbot/scorbot_catkin_ws/devel/: .catkin  .rosinstall  local_setup.sh
software_scorbot/scorbot_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
software_scorbot/scorbot_ws/log/: latest_build
software_scorbot/scorbot_ws/scorbot/: CMakeLists.txt  package.xml
software_scorbot/scorbot_ws/scorbot/src/: scorbot.cpp  scorbot.h  scorbot_node.cpp
software_scorbot/scorbot_ws/scorbot_msgs/: CMakeLists.txt  package.xml
src/scorbot_gazebo_effort/: CMakeLists.txt
src/scorbot_gazebo_effort/config/: controllers (BAK).yaml  controllers.yaml
src/scorbot_gazebo_effort/launch/: load_robot_description.launch  scorbot_effort.launch
src/scorbot_gazebo_effort/script/: scorbot_effort_mover_demo.py
src/scorbot_gazebo_effort/urdf/: gazebo.urdf.xacro  scorbot.urdf.xacro  scorbot_ER-VII.urdf
src/scorbot_tf/config/: controllers.yaml
src/scorbot_tf/launch/: scorbot_join_test.launch
src/scorbot_tf/src/: scorbot_direct_kinematics.py
src/scorbot_tf/urdf/: scorbot.urdf.xacro
teleop_packages/: source_teleop_packages.py
teleop_packages/ros_joy/devel/: .catkin  _setup_util.py  local_setup.sh  setup.sh
teleop_packages/ros_keyboard/devel/: .catkin  .rosinstall  setup.sh
teleop_packages/ros_keyboard/install/: local_setup.sh  setup.sh
teleop_packages/ros_keyboard/log/: latest_build
teleop_packages/ros_keyboard/src/ros-keyboard/: CMakeLists.txt  package.xml
teleop_packages/ros_keyboard/src/ros-keyboard/src/: keyboard.cpp  keyboard.h  main.cpp
teleop_packages/universal_teleop/devel/: .catkin  local_setup.sh
teleop_packages/universal_teleop/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
teleop_packages/universal_teleop/log/: latest_build
teleop_packages/universal_teleop/src/ros-universal-teleop/: CMakeLists.txt
teleop_packages/universal_teleop/src/ros-universal-teleop/launch/: scorbot.launch  scorbot_input_map.yml
teleop_packages/universal_teleop/src/ros-universal-teleop/src/: main.cpp  teleop.cpp  teleop.h
testing_results/: demo_a_grabar_0.035000.txt  demo_a_grabar_0.050000.txt  test_garra.txt  test_garra_accidentado.txt  test_movimiento_0.002500.txt  test_movimiento_0.005000.csv  test_movimiento_0.005000.txt  test_movimiento_0.010000.csv  test_movimiento_0.010000.txt  test_movimiento_0.020000.txt  test_movimiento_0.025000.txt  test_movimiento_0.035000.txt  test_movimiento_0.050000.txt  test_movimiento_sin_base_0.010000.txt  test_movimiento_sin_base_0.025000.txt  test_movimiento_sin_base_0.050000.txt  test_movimiento_sin_tiempo_0.020000.txt  test_movimiento_sin_tiempo_0.025000.txt  test_movimiento_sin_tiempo_0.035000.txt  test_movimiento_sin_tiempo_0.050000.txt  test_vel_pid_base.txt  test_vel_pid_codo.txt  test_vel_pid_hombro.txt  test_vel_pid_muneca.txt  test_vel_pid_roll.txt
universal_teleop/install/: local_setup.sh  setup.ps1  setup.sh
universal_teleop/log/: latest_build
universal_teleop/src/ros-universal-teleop/: package.xml
universal_teleop/src/ros_keyboard_msgs/: CMakeLists.txt
(+472 files in other folders)
