<package>
  <name>seguidor_de_poses</name>
  <version>0.1.0</version>
  <description>
    Nodos para trabajar con el scorbot
  </description>
  <maintainer email="facu.pessacg@gmail.com">Facundo Pessacg</maintainer>
  <license>BSD, GPL</license>

  <url>http://robotica.dc.uba.ar</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>control_msgs</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>control_msgs</run_depend>

</package>
